cabal-version:       2.4
name:                trace-forward
version:             0.1.0
synopsis:            The forwarding protocols library for cardano node.
description:         The library providing typed protocols for forwarding different
                     information from the cardano node to an external application.
license:             Apache-2.0
license-file:        LICENSE
copyright:           2021 Input Output (Hong Kong) Ltd.
author:              IOHK
maintainer:          operations@iohk.io
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md

common base
  build-depends:       base >= 4.14 && < 4.15

common project-config
  default-language:    Haskell2010

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wno-unticked-promoted-constructors
                       -Wno-orphans
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wunused-packages

library
  import:              base, project-config
  hs-source-dirs:      src

  exposed-modules:     Trace.Forward.Protocol.DataPoint.Acceptor
                       Trace.Forward.Protocol.DataPoint.Codec
                       Trace.Forward.Protocol.DataPoint.Forwarder
                       Trace.Forward.Protocol.DataPoint.Type
                       Trace.Forward.Protocol.TraceObject.Acceptor
                       Trace.Forward.Protocol.TraceObject.Codec
                       Trace.Forward.Protocol.TraceObject.Forwarder
                       Trace.Forward.Protocol.TraceObject.Type

                       Trace.Forward.Run.DataPoint.Acceptor
                       Trace.Forward.Run.DataPoint.Forwarder
                       Trace.Forward.Run.TraceObject.Acceptor
                       Trace.Forward.Run.TraceObject.Forwarder

                       Trace.Forward.Configuration.DataPoint
                       Trace.Forward.Configuration.TraceObject

                       Trace.Forward.Utils.DataPoint
                       Trace.Forward.Utils.TraceObject

  build-depends:         aeson                       >= 2.1.0.0   && <2.2
                       , async                       >= 2.2.4     && <2.3
                       , bytestring                  >= 0.10.12.0 && <0.11
                       , cborg                       >= 0.2.7.0   && <0.3
                       , containers                  >= 0.6.5.1   && <0.7
                       , contra-tracer               >= 0.1.0.0   && <0.2
                       , extra                       >= 1.7.10    && <1.8
                       , io-classes                  >= 0.2.0.0   && <0.3
                       , ouroboros-network-framework >= 0.1.0.0   && <0.2
                       , serialise                   >= 0.2.5.0   && <0.3
                       , stm                         >= 2.5.0.1   && <2.6
                       , text                        >= 1.2.4.1   && <1.3
                       , typed-protocols             >= 0.1.0.0   && <0.2
                       , typed-protocols-cborg       >= 0.1.0.0   && <0.2

test-suite test
  import:              base, project-config
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test

  other-modules:       Test.Trace.Forward.Protocol.TraceObject.Codec
                       Test.Trace.Forward.Protocol.TraceObject.Direct
                       Test.Trace.Forward.Protocol.TraceObject.Examples
                       Test.Trace.Forward.Protocol.TraceObject.Item
                       Test.Trace.Forward.Protocol.TraceObject.Tests

                       Test.Trace.Forward.Protocol.DataPoint.Codec
                       Test.Trace.Forward.Protocol.DataPoint.Direct
                       Test.Trace.Forward.Protocol.DataPoint.Examples
                       Test.Trace.Forward.Protocol.DataPoint.Item
                       Test.Trace.Forward.Protocol.DataPoint.Tests

                       Test.Trace.Forward.Protocol.Common

  build-depends:         aeson
                       , bytestring
                       , contra-tracer
                       , io-classes
                       , io-sim
                       , ouroboros-network-framework
                       , trace-forward
                       , QuickCheck
                       , serialise
                       , tasty
                       , tasty-quickcheck
                       , typed-protocols
                       , text

  ghc-options:         -rtsopts
                       -threaded
