cabal-version: 2.4

name:                  locli
version:               1.29
description:           Cardano log analysis CLI.
author:                IOHK
maintainer:            operations@iohk.io
license:               Apache-2.0
license-files:
  NOTICE
build-type:            Simple

common base
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       BlockArguments
                       DeriveGeneric
                       DerivingStrategies
                       DerivingVia
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       ImportQualifiedPost
                       LambdaCase
                       MultiParamTypeClasses
                       NamedFieldPuns
                       NoImplicitPrelude
                       OverloadedStrings
                       PartialTypeSignatures
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeInType
                       ViewPatterns

  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Wcompat
                       -Wno-all-missed-specialisations

  build-depends:       base

  if os(windows)
    buildable: False

library
  import:              base
  hs-source-dirs:      src

  exposed-modules:     Data.Accum
                       Data.CDF
                       Data.DataDomain

                       Cardano.Command
                       Cardano.Report
                       Cardano.TopHandler
                       Cardano.Util

                       Cardano.Analysis.Run

                       Cardano.Analysis.API
                       Cardano.Analysis.BlockProp
                       Cardano.Analysis.Chain
                       Cardano.Analysis.ChainFilter
                       Cardano.Analysis.Context
                       Cardano.Analysis.Ground
                       Cardano.Analysis.MachPerf
                       Cardano.Analysis.Version

                       Cardano.Unlog.LogObject
                       Cardano.Unlog.Org
                       Cardano.Unlog.Render
                       Cardano.Unlog.Resources

  other-modules:       Paths_locli

  build-depends:       aeson                     >= 2.1.0.0   && <2.2
                     , aeson-pretty              >= 0.8.9     && <0.9
                     , async                     >= 2.2.4     && <2.3
                     , attoparsec                >= 0.14.4    && <0.15
                     , attoparsec-iso8601        >= 1.0.2.1   && <1.1
                     , bytestring                >= 0.10.12.0 && <0.11
                     , cardano-git-rev
                     , cardano-prelude           >= 0.1.0.0   && <0.2
                     , cardano-ledger-core       >= 0.1.0.0   && <0.2
                     , iohk-monitoring           >= 0.1.11.0  && <0.2
                     , cardano-slotting          >= 0.1.0.0   && <0.2
                     , containers                >= 0.6.5.1   && <0.7
                     , deepseq                   >= 1.4.4.0   && <1.5
                     , directory                 >= 1.3.6.0   && <1.4
                     , ede                       >= 0.3.3.0   && <0.4
                     , extra                     >= 1.7.10    && <1.8
                     , filepath                  >= 1.4.2.1   && <1.5
                     , file-embed                >= 0.0.15.0  && <0.1
                     , gnuplot                   >= 0.5.7     && <0.6
                     , Histogram                 >= 0.1.0.2   && <0.2
                     , optparse-applicative-fork >= 0.16.1.0  && <0.17
                     , optparse-generic          >= 1.4.7     && <1.5
                     , ouroboros-consensus       >= 0.1.0.0   && <0.2
                     -- for Data.SOP.Strict:
                     , ouroboros-network         >= 0.1.0.0   && <0.2
                     , process                   >= 1.6.13.2  && <1.7
                     , quiet                     >= 0.2       && <0.3
                     , scientific                >= 0.3.7.0   && <0.4
                     , split                     >= 0.2.3.4   && <0.3
                     , statistics                >= 0.16.1.0  && <0.17
                     , system-filepath           >= 0.4.14    && <0.5
                     , template-haskell          >= 2.16.0.0  && <2.17
                     , text                      >= 1.2.4.1   && <1.3
                     , text-short                >= 0.1.5     && <0.2
                     , time                      >= 1.9.3     && <1.10
                     , trace-resources
                     , transformers              >= 0.5.6.2   && <0.6
                     , transformers-except       >= 0.1.2     && <0.2
                     , unix                      >= 2.7.2.2   && <2.8
                     , unordered-containers      >= 0.2.19.1  && <0.3
                     , utf8-string               >= 1.0.2     && <1.1
                     , vector                    >= 0.12.3.1  && <0.13

executable locli
  import:              base

  hs-source-dirs:      app
  main-is:             locli.hs
  ghc-options:         -threaded
                       -Wall
                       -rtsopts
                       "-with-rtsopts=-T -N7 -A2m -qb -H64m"

  build-depends:       aeson
                     , cardano-prelude
                     , locli
                     , optparse-applicative-fork
                     , text
                     , text-short
                     , transformers
                     , transformers-except

test-suite test-locli
  import:               base

  hs-source-dirs:       test
  main-is:              test-locli.hs
  type:                 exitcode-stdio-1.0
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

  build-depends:        cardano-prelude
                      , containers
                      , hedgehog
                      , hedgehog-extras
                      , locli
                      , text

  other-modules:        Test.Analysis.CDF
                        Test.Unlog.Org
