name:                  tx-generator
version:               2.3
description:           The transaction generator for cardano node
author:                IOHK
maintainer:            operations@iohk.io
license:               Apache-2.0
license-files:
  LICENSE
  NOTICE
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md
data-files:            data/protocol-parameters.json

library
  hs-source-dirs:      src
  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-prepositive-qualified-module
                        -Wno-unticked-promoted-constructors
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wwarn=deprecations

  exposed-modules:
                       Cardano.Benchmarking.Command
                       Cardano.Benchmarking.Compiler
                       Cardano.Benchmarking.Fifo
                       Cardano.Benchmarking.FundSet
                       Cardano.Benchmarking.GeneratorTx
                       Cardano.Benchmarking.GeneratorTx.Error
                       Cardano.Benchmarking.GeneratorTx.Genesis
                       Cardano.Benchmarking.GeneratorTx.NodeToNode
                       Cardano.Benchmarking.GeneratorTx.Tx
                       Cardano.Benchmarking.GeneratorTx.SizedMetadata
                       Cardano.Benchmarking.GeneratorTx.Tx.Byron
                       Cardano.Benchmarking.GeneratorTx.Submission
                       Cardano.Benchmarking.GeneratorTx.SubmissionClient
                       Cardano.Benchmarking.LogTypes
                       Cardano.Benchmarking.NixOptions
                       Cardano.Benchmarking.OuroborosImports
                       Cardano.Benchmarking.Script
                       Cardano.Benchmarking.Script.Action
                       Cardano.Benchmarking.Script.Aeson
                       Cardano.Benchmarking.Script.Core
                       Cardano.Benchmarking.Script.Env
                       Cardano.Benchmarking.Script.NodeConfig
                       Cardano.Benchmarking.Script.Selftest
                       Cardano.Benchmarking.Script.Setters
                       Cardano.Benchmarking.Script.Store
                       Cardano.Benchmarking.Script.Types
                       Cardano.Benchmarking.TpsThrottle
                       Cardano.Benchmarking.Tracer
                       Cardano.Benchmarking.Types
                       Cardano.Benchmarking.Version
                       Cardano.Benchmarking.Wallet
                       Cardano.Benchmarking.PlutusExample

  other-modules:       Paths_tx_generator

  autogen-modules:     Paths_tx_generator

  build-depends:       aeson                       >= 2.1.0.0   && <2.2
                     , aeson-pretty                >= 0.8.9     && <0.9
                     , async                       >= 2.2.4     && <2.3
                     , attoparsec                  >= 0.14.4    && <0.15
                     , base                        >= 4.12      && <5
                     , bytestring                  >= 0.10.12.0 && <0.11
                     , cardano-api
                     , cardano-binary              >= 1.5.0     && <1.6
                     , cardano-cli
                     , cardano-crypto-class        >= 2.0.0     && <2.1
                     , cardano-crypto-wrapper      >= 1.3.0     && <1.4
                     , cardano-data                >= 0.1.0.0   && <0.2
                     , cardano-git-rev
                     , cardano-ledger-alonzo       >= 0.1.0.0   && <0.2
                     , cardano-ledger-byron        >= 0.1.0.0   && <0.2
                     , cardano-node
                     , cardano-prelude             >= 0.1.0.0   && <0.2
                     , contra-tracer               >= 0.1.0.0   && <0.2
                     , cborg                       >= 0.2.2     && <0.3
                     , containers                  >= 0.6.5.1   && <0.7
                     , constraints-extras          >= 0.3.2.1   && <0.4
                     , dependent-map               >= 0.4.0.0   && <0.5
                     , dependent-sum               >= 0.7.1.0   && <0.8
                     , dependent-sum-template      >= 0.1.1.1   && <0.2
                     , dlist                       >= 1.0       && <1.1
                     , extra                       >= 1.7.10    && <1.8
                     , formatting                  >= 6.3.7     && <6.4
                     , generic-monoid              >= 0.1.0.1   && <0.2
                     , ghc-prim                    >= 0.6.1     && <0.7
                     , io-classes                  >= 0.2.0.0   && <0.3
                     , network                     >= 3.1.2.7   && <3.2
                     , network-mux                 >= 0.1.0.0   && <0.2
                     , optparse-applicative-fork   >= 0.16.1.0  && <0.17
                     , ouroboros-consensus         >= 0.1.0.0   && <0.2
                     , ouroboros-consensus-byron   >= 0.1.0.0   && <0.2
                     , ouroboros-consensus-cardano >= 0.1.0.0   && <0.2
                     , ouroboros-consensus-shelley >= 0.1.0.0   && <0.2
                     , ouroboros-network           >= 0.1.0.0   && <0.2
                     , ouroboros-network-framework >= 0.1.0.0   && <0.2
                     , plutus-ledger-api           >= 1.0.0.0   && <1.1
                     , random                      >= 1.2.1.1   && <1.3
                     , serialise                   >= 0.2.5.0   && <0.3
                     , strict-stm                  >= 0.1.0.0   && <0.2
                     , cardano-ledger-shelley      >= 0.1.0.0   && <0.2
                     , stm                         >= 2.5.0.1   && <2.6
                     , text                        >= 1.2.4.1   && <1.3
                     , time                        >= 1.9.3     && <1.10
                     , trace-dispatcher
                     , transformers                >= 0.5.6.2   && <0.6
                     , transformers-except         >= 0.1.2     && <0.2
                     , unordered-containers        >= 0.2.19.1  && <0.3

  default-language:    Haskell2010
  default-extensions: OverloadedStrings

  ghc-options:         -Wall
                       -fno-warn-safe
                       -fno-warn-unsafe
                       -fno-warn-missing-import-lists
                       -Wno-unticked-promoted-constructors
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Wcompat

executable tx-generator
  hs-source-dirs:      app
  main-is:             tx-generator.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -rtsopts
                       "-with-rtsopts=-T"

  build-depends:       base >=4.12 && <5
                     , tx-generator

test-suite tx-generator-test
  hs-source-dirs:       test
  main-is:              Main.hs
  type:                 exitcode-stdio-1.0

  build-depends:        base >=4.12 && <5
                      , tasty
                      , tasty-hunit
                      , tx-generator

  default-language:     Haskell2010

  ghc-options:          -Weverything
                        -fno-warn-missing-import-lists
                        -fno-warn-safe
                        -fno-warn-unsafe
                        -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

benchmark tx-generator-bench
  hs-source-dirs:       test
  main-is:              Bench.hs
  type:                 exitcode-stdio-1.0

  build-depends:        base >=4.12 && <5
                      , criterion
                      , tx-generator

  default-language:     Haskell2010

  ghc-options:          -Weverything
                        -fno-warn-missing-import-lists
                        -fno-warn-safe
                        -fno-warn-unsafe
                        -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
